--- a/Email Sub/style.css
+++ b/Email Sub/style.css
@@ -15,9 +15,12 @@ body {
     margin-top: 5em;
 }
 
+.header {
+    width: 85%;
+}
+
 .logo {
     display: flex;
-    align-items: right;
     width: 75vw;
 }
 
@@ -62,29 +65,6 @@ body {
     padding-top: 1.5em;
 }
 
-button {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 10px 14px;
-    width: 120px;
-    height: 36px;
-    background: #00B87C;
-    border-radius: 3px;
-    color: white;
-    border: none;
-}
-
-button:focus {
-    outline: none;
-}
-
-.button {
-    display: flex;
-    justify-content: center;
-}
-
 main {
     display: flex;
     flex-direction: column;
@@ -116,8 +96,8 @@ footer {
 }
 
 .footer_link_tags_text {
-    width: 380px;
-    height: 100px;
+    width: 370px;
+    height: fit-content;
     font-size: 25px;
     line-height: 30px;
     text-align: justify;
@@ -139,6 +119,10 @@ footer {
     font-size: 21px;
 }
 
+.quick_links {
+    margin-top: 2em;
+}
+
 @media only screen and (min-width: 768px) {
     .paragraph {
         width: 25em;
@@ -147,14 +131,6 @@ footer {
     main,
     footer {
         width: 60%;
-    }
-    button {
-        width: 150px;
-        height: 50px;
-    }
-    .button {
-        display: flex;
-        justify-content: flex-start;
     }
     .footer_link_tags {
         width: 80%;
