--- a/Email Sub/style.css
+++ b/Email Sub/style.css
@@ -7,7 +7,7 @@ body {
     background: #E5E5E5;
 }
 
-.container {
+.content {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -123,7 +123,54 @@ footer {
     margin-top: 2em;
 }
 
+.text_closing a {
+    text-decoration: none;
+    color: #98baf8;
+}
+
 @media only screen and (min-width: 768px) {
+    .container {
+        background: #F3F6F8;
+        /* border: solid black; */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .header {
+        margin-top: 5em;
+        /* border: solid red; */
+        height: max-content;
+    }
+    .logo {
+        /* border: solid green; */
+        display: flex;
+        justify-content: center;
+        height: 100%;
+        width: 100%;
+    }
+    main {
+        /* border: solid red; */
+        height: fit-content;
+    }
+    main img {
+        width: 632.57px;
+        height: 400.11px;
+    }
+    .logo img {
+        width: 4em;
+        height: 4em;
+    }
+    .footer_logo {
+        display: flex;
+        width: 75vw;
+    }
+    .content {
+        margin: 8em;
+        margin-bottom: 0;
+        background: #FFFFFF;
+        /* border: solid black; */
+        height: fit-content;
+    }
     .paragraph {
         width: 25em;
     }
