--- a/Email Sub/style.css
+++ b/Email Sub/style.css
@@ -12,7 +12,7 @@ body {
     flex-direction: column;
     align-items: center;
     height: fit-content;
-    margin-top: 5em;
+    margin: 2em;
     background: #FFFFFF;
 }
 
@@ -113,7 +113,7 @@ footer {
 }
 
 .footer_link_tags_text {
-    width: 370px;
+    width: 340px;
     height: fit-content;
     font-size: 25px;
     line-height: 30px;
