--- a/Email Sub/style.css
+++ b/Email Sub/style.css
@@ -4,12 +4,22 @@ body {
     margin: 0;
     height: 95vh;
     font-family: Lato;
-    background: #E5E5E5;
+    box-sizing: border-box;
+}
+
+.container,
+.content,
+main {
+    display: flex;
+    flex-direction: column;
+}
+
+.container {
+    background: #F3F6F8;
+    align-items: center;
 }
 
 .content {
-    display: flex;
-    flex-direction: column;
     align-items: center;
     height: fit-content;
     margin: 2em;
@@ -19,15 +29,12 @@ body {
 .header {
     width: 85%;
     margin-top: 3em;
-    /* border: solid red; */
     height: max-content;
 }
 
 .logo {
     display: flex;
-    /* width: 75vw; */
     justify-content: center;
-    /* height: 100%; */
     width: 100%;
 }
 
@@ -59,15 +66,12 @@ main img {
     font-size: 18px;
     text-align: justify;
     color: #1f1d1d;
-    /* border: solid black; */
-    /* word-spacing: .1em; */
 }
 
 .text_greetings {
     padding-top: 1.5em;
     padding-bottom: 1em;
     height: fit-content;
-    /* border: solid red; */
 }
 
 .text_body,
@@ -85,8 +89,6 @@ main img {
 }
 
 main {
-    display: flex;
-    flex-direction: column;
     justify-content: center;
 }
 
@@ -96,11 +98,14 @@ footer {
     width: 18rem;
     padding-top: .5em;
     margin-top: 5em;
-    /* border: solid red; */
+}
+
+.footer_link,
+.footer_logo {
+    display: flex;
 }
 
 .footer_link {
-    display: flex;
     font-size: 18px;
 }
 
@@ -114,18 +119,14 @@ footer {
     margin-top: 2em;
     border-top: solid #C4C4C4;
     font-size: 18px;
-    /* border: solid red; */
     width: 90%;
 }
 
 .footer_link_tags_text {
-    /* width: 340px; */
     height: fit-content;
-    /* font-size: 25px; */
     line-height: 30px;
     text-align: justify;
     color: #1f1d1d;
-    /* word-spacing: .1em; */
 }
 
 .footer_link_tags ul {
@@ -139,11 +140,9 @@ footer {
 .footer_link_tags ul li a {
     color: #999999;
     text-decoration: none;
-    /* font-size: 21px; */
 }
 
 .footer_logo {
-    display: flex;
     width: 75vw;
 }
 
@@ -157,48 +156,41 @@ footer {
 }
 
 @media only screen and (min-width: 768px) {
-    .container {
-        background: #F3F6F8;
-        /* border: solid black; */
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
     .header {
         margin-top: 5em;
-        /* border: solid red; */
         height: max-content;
     }
-    .logo {
-        /* border: solid green; */
+    .logo,
+    .footer_link_tags_text,
+    .footer_link_tags ul {
         display: flex;
         justify-content: center;
+    }
+    .logo {
         height: 100%;
         width: 100%;
     }
     main {
-        /* border: solid red; */
         height: fit-content;
     }
     main img {
-        width: 632.57px;
+        width: 100%;
         height: 400.11px;
     }
     .content {
         margin: 8em;
         margin-bottom: 0;
         background: #FFFFFF;
-        /* border: solid black; */
         height: fit-content;
     }
     .paragraph {
-        width: 25em;
+        width: 100%;
         font-size: 28px;
     }
     .header,
     main,
     footer {
-        width: 60%;
+        width: 85%;
     }
     .footer_link {
         font-size: 21px;
@@ -208,18 +200,14 @@ footer {
         font-size: 25px;
     }
     .footer_link_tags_text {
-        display: flex;
-        justify-content: center;
         width: 100%;
     }
     .footer_link_tags ul li {
-        display: inline;
-        margin-left: 3.5em;
+        margin-left: 2.5em;
     }
     .footer_link_tags ul {
         display: flex;
+        justify-content: flex-start;
         align-content: center;
-        justify-content: center;
-        /* border: solid red; */
     }
 }
