--- a/Email Sub/style.css
+++ b/Email Sub/style.css
@@ -58,6 +58,8 @@ main {
 main img {
     width: 300.57px;
     height: 210.11px;
+    padding: 0 .5em;
+    border: solid green;
 }
 
 .paragraph {
@@ -66,6 +68,11 @@ main img {
     font-size: 18px;
     text-align: justify;
     color: #1f1d1d;
+}
+
+p {
+    border: solid red;
+    padding-left: .5em;
 }
 
 .text_greetings {
